--- a/Src/Routes/views/index.html
+++ b/Src/Routes/views/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Healthcare Dashboard UI</title>
-  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.4.1/css/all.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.4.1/css/all.css'><link rel="stylesheet" href="../../../Public/ccs/style_old.css">
 
 </head>
 <body>
@@ -216,7 +216,7 @@
 <!-- partial -->
   <script src='https://cdn.jsdelivr.net/npm/chart.js@2.8.0'></script>
 <script src='https://cdn.jsdelivr.net/npm/chartjs-plugin-deferred@1.0.1'></script>
-<script src='https://cdn.jsdelivr.net/npm/chartjs-plugin-style@0.5.0'></script><script  src="./script.js"></script>
+<script src='https://cdn.jsdelivr.net/npm/chartjs-plugin-style@0.5.0'></script><script  src="../../../Public/js/script_old.js"></script>
 
 </body>
 </html>
