--- a/src/Routes/views/login.html
+++ b/src/Routes/views/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h2>Inicio de Sesión</h2>
-        <form id="loginForm" action="../index.php/login" method="POST">
+        <form id="loginForm" action="/login" method="POST"> 
             <div class="input-group">
                 <label for="email">Correo Electrónico</label>
                 <input type="email" id="email" name="email" required>
