Modificacion de la pagina Principal

--- a/src/Routes/views/register.html
+++ b/src/Routes/views/register.html
@@ -40,6 +40,11 @@
         <span class="error-message" id="generoError"></span> 
       </div>
       <div class="input-group">
+        <label for="Pais">Pais:</label>
+        <input type="tex" id="pais" name="pais" required>
+        <span class="error-message" id="paisError"></span> 
+      </div>
+      <div class="input-group">
         <label for="fechaNacimiento">Fecha de nacimiento:</label>
         <input type="date" id="fechaNacimiento" name="fechaNacimiento"   
         required>
