--- a/Src/Routes/views/index.html
+++ b/Src/Routes/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Healthcare Dashboard UI</title>
+  <title>GOOD HABITS home</title>
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.4.1/css/all.css'><link rel="stylesheet" href="../../../Public/ccs/style_old.css">
 
 </head>
@@ -10,29 +10,27 @@
 <!-- partial:index.partial.html -->
 <div class="wrapper">
         <header class="header">
-            <a href="#" class="btn-appointment">Make an appointment</a>
+            <a href="#" class="btn-appointment">Nuevo Habito</a>
             <div class="profile">
                 <div class="image">
-                    <img src="https://i.pravatar.cc/150?img=26" />
-                    <div class="notification"></div>
+                    <!--<img src="https://i.pravatar.cc/150?img=26" />
+                    <div class="notification"></div>-->
                 </div>
 
                 <select>
-                    <option value="Maria waters">Maria Waters</option>
+                    <option value="Pedro Perez">Pedro Perez</option>
                 </select>
             </div>
         </header>
         <aside class="aside">
             <ul>
                 <li class="logo hide">
-                    <a href="#"><img src="https://ozcanzaferayan.github.io/healthcare-dashboard/img/logo.png" alt="logo" width="25"></a>
+                    <a href="#"><img src="../../Img/Logo3.PNG" alt="logo" width="25"></a>
                 </li>
                 <li class="active"><a href="#"><i class="fas fa-columns"></i></a></li>
                 <li><a href="#"><i class="fa fa-folder" aria-hidden="true"></i></a></li>
                 <li><a href="#"><i class="fas fa-chart-area    "></i></a></li>
-                <li><a href="#"><i class="fas fa-pills    "></i></a></li>
-                <li class="hide"><a href="#"><i class="fas fa-calendar-check    "></i></a></li>
-                <li class="hide"><a href="#"><i class="fas fa-file-invoice-dollar    "></i></a></li>
+                <!--<li class="hide"><a href="#"><i class="fas fa-calendar-check    "></i></a></li>-->
                 <li class="hide"><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i>
                     <!-- <span class="count">8</span> -->
                 </a></li>
@@ -50,12 +48,12 @@
                             <img class="image" src="https://e7.pngegg.com/pngimages/869/265/png-clipart-drawing-computer-icons-sleep-icon-angle-text.png" />
                             <span class="name">Horas de Sueño</span>
                             <span class="title"></span>
-                            <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> 22/07/2018</span>
-                            <span class="time"><i class="fas fa-clock"></i> 11:00 PM</span>
-                            <a href="#" class="check"><i class="far fa-check-circle" aria-hidden="true"></i></a>
-                            <a href="#" class="times"><i class="far fa-times-circle" aria-hidden="true"></i></a>
+                            <span class="date"><i class="fa fa-calendar" aria-hidden="true"></i> 22/07/2018</span><!--cuando se empezo el Habito-->
+                            <span class="time"><i class="fas fa-clock"></i> 11:00 PM</span><!--Hora cuando lo realiza-->
+                            <a href="#" class="check"><i class="far fa-check-circle" aria-hidden="true"></i></a><!--cambiar estado realizado-->
+                            <a href="#" class="times"><i class="far fa-times-circle" aria-hidden="true"></i></a><!--cambiar estado Pausado-->
                         </div>
-                        <div class="appointment">
+                        <!--<div class="appointment">
                             <img class="image gray" src="https://i.pravatar.cc/150?img=1" />
                             <span class="name">dr Caroline Fields</span>
                             <span class="title">psycologist</span>
@@ -63,8 +61,8 @@
                             <span class="time"><i class="fas fa-clock"></i> 2:30 PM</span>
                             <a href="#" class="check"><i class="fas fa-check-circle" aria-hidden="true"></i></a>
                             <a href="#" class="times"><i class="far fa-times-circle" aria-hidden="true"></i></a>
-                        </div>
-                        <div class="appointment">
+                        </div>-->
+                         <!--<div class="appointment">
                             <img class="image red" src="https://i.pravatar.cc/150?img=30" />
                             <span class="name">dr Natalie Smith</span>
                             <span class="title">dentist</span>
@@ -72,19 +70,19 @@
                             <span class="time"><i class="fas fa-clock"></i> 2:30 PM</span>
                             <a href="#" class="check"><i class="far fa-check-circle" aria-hidden="true"></i></a>
                             <a href="#" class="times"><i class="far fa-times-circle" aria-hidden="true"></i></a>
-                        </div>
+                        </div>-->
                     </div>
                 </div>
                 <div class="recent-results card">
                     <div class="card-header">
                         <div class="header-container">
-                            <h1>Recent results </h1>
-                            <span>Glucose</span>
+                            <h1>Resultados Recientes </h1>
+                            <span></span><!--Nombre del Habito de la tabla-->
                         </div>
                         <select>
-                            <option value="May 2018">May 2018</option>
+                            <!--<option value="May 2018">May 2018</option>
                         </select>
-                        <a href="#"><i class="fa fa-ellipsis-h right" aria-hidden="true"></i></a>
+                        <a href="#"><i class="fa fa-ellipsis-h right" aria-hidden="true"></i></a>-->
                     </div>
 
                     <div class="card-body">
@@ -97,36 +95,36 @@
             <div class="bottom">
                 <div class="news card">
                     <div class="card-header">
-                        <h1>News</h1>
+                        <h1>Tips</h1>
                         <a href="#"><i class="fa fa-ellipsis-h right" aria-hidden="true"></i></a>
                     </div>
                     <div class="card-body">
                         <ul class="news-list">
                             <li>
                                 <a href="#" class="news">
-                                    <span class="title">10% off for dermatlogist conslutation</span>
-                                    <span class="subtitle">Save money for first visit</span>
+                                    <span class="title">Prioriza una alimentación balanceada y evita la comida procesada.</span>
+                                    <span class="subtitle">Sustituye snacks poco saludables con alternativas nutritivas como frutas frescas o yogur.</span>
                                     <i class="fas fa-caret-right"></i>
                                     <hr>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="news">
-                                    <span class="title">Free visit to the cardiologist on May 2-6</span>
-                                    <span class="subtitle">Take care Of your health, do medical examination</span>
+                                    <span class="title">Establece un plan de estudios organizado con objetivos pequeños y alcanzables.</span>
+                                    <span class="subtitle">Usa herramientas como aplicaciones para registrar tu progreso y evitar distracciones.</span>
                                     <i class="fas fa-caret-right"></i>
                                     <hr>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="news">
-                                    <span class="title">50% discount on allergy tests</span>
-                                    <span class="subtitle"> Spring is coming, take control Of allergy</span>
+                                    <span class="title">Aprende a gestionar tu tiempo priorizando las tareas importantes y delegando las que no lo sean.</span>
+                                    <span class="subtitle">Además, comparte ideas y prácticas positivas con tus colegas para fomentar un ambiente colaborativo.</span>
                                     <i class="fas fa-caret-right"></i>
                                     <hr>
                                 </a>
                             </li>
-                            <li class="more"><a href="#">More...</a></li>
+                            <li class="more"><a href="#"></a></li>
                         </ul>
 
                     </div>
@@ -134,37 +132,37 @@
                 <div class="current-prescription-container">
                     <div class="current-prescription card">
                         <div class="card-header">
-                            <h1>Current prescription </h1>
+                            <h1>Proximos Eventos </h1>
                             <a href="#"><i class="fa fa-ellipsis-h right" aria-hidden="true"></i></a>
                         </div>
                         <ul>
                             <li>
                                 <a href="#" class="prescription-item">
                                     <div class="dot gray"></div>
-                                    <span class="title">Vitamin D</span>
-                                    <span class="description">5mg - 2x per day</span>
+                                    <span class="title">Hora de Dormir</span>
+                                    <span class="description">10:00 pm</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#" class="prescription-item">
+                                <!--<a href="#" class="prescription-item">
                                     <div class="dot violet"></div>
                                     <span class="title">Cetirizine</span>
                                     <span class="description">10mg - once per day at the morning</span>
-                                </a>
+                                </a>-->
                             </li>
                         </ul>
                     </div>
                     <div class="card alert">
                         <div class="card-header">
-                            <h1>Alert</h1>
+                            <h1>Alerta</h1>
                             <a href="#"><i class="fa fa-ellipsis-h right" aria-hidden="true"></i></a>
                         </div>
-                        <span>Air pollution: <b>230%</b> of norm</span>
+                        <span>Mensaje de Prueba</span>
                     </div>
                 </div>
                 <div class="notifications card">
                     <div class="card-header">
-                        <h1>Notifications </h1>
+                        <h1>Notifications o Mensajes </h1>
                         <a href="#"><i class="fa fa-ellipsis-h right" aria-hidden="true"></i></a>
                     </div>
                     <div class="card-body">
@@ -172,18 +170,18 @@
                             <li>
                                 <a href="#" class="notification">
                                     <div class="dot green"></div>
-                                    <span class="title">You confirmed visit to dermatologist</span>
+                                    <span class="title">Te recomendamos unirte a un grupo de apoyo</span>
                                     <span class="date">2 days ago</span>
                                 </a>
                             </li>
                             <li>
                                 <a href="#" class="notification">
                                     <div class="dot green"></div>
-                                    <span class="title">Your results are available to download</span>
+                                    <span class="title">Tu suscripcion Vencera</span>
                                     <span class="date">3 days ago</span>
                                 </a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a href="#" class="notification">
                                     <div class="dot green"></div>
                                     <span class="title">Dr. John Smith cancelled your visit</span>
@@ -204,7 +202,7 @@
                                     <span class="date">5 days ago</span>
                                 </a>
                             </li>
-                            <li class="more"><a href="#">More...</a></li>
+                            <li class="more"><a href="#">More...</a></li>-->
                         </ul>
 
                     </div>
