--- a/Public/ccs/Grupos.css
+++ b/Public/ccs/Grupos.css
@@ -37,7 +37,7 @@ h1 {
 button {
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background: linear-gradient(90deg, #9395ed 0%, #6c6de3 100%);
     border: none;
     border-radius: 4px;
     color: #fff;
