--- a/Public/ccs/ModUser.css
+++ b/Public/ccs/ModUser.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     background-color: #f0f0f0;
     display: flex;
-    flex-direction: column; /* Alinea los elementos en columna */
+    flex-direction: column; 
     align-items: center;
     height: 100vh;
     margin: 0;
@@ -15,15 +15,11 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     width: 700px; 
     text-align: center;
-    display: grid; 
-    grid-template-columns: repeat(2, 1fr); 
-    gap: 10px; 
 }
 
 h1 { 
-    grid-column: span 2; 
     margin-bottom: 20px;
-    text-align: center; /* Centra el título */
+    text-align: center; 
 }
 
 .input-group {
@@ -32,7 +28,8 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: space-between;
-  }
+}
+
 label {
     display: block;
     margin-bottom: 5px;
@@ -49,10 +46,9 @@ textarea {
 }
 
 button {
-    grid-column: span 2; 
     width: 100%;
     padding: 10px;
-    background-color: #007bff;
+    background-color: #7e7fe8;;
     border: none;
     border-radius: 4px;
     color: #fff;
@@ -61,29 +57,42 @@ button {
 }
 
 button:hover {
-    background-color: #0056b3;
+    background: linear-gradient(90deg, #9395ed 0%, #6c6de3 100%);
 }
 
-.error-message {
-    color: red;
-    font-size: 12px;
-    display: none;
+.delete-button {
+  background-color: #dc3545; 
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  border-radius: 4px;
 }
-.nombre-habito-group {
+header {
     display: flex;
     align-items: center;
-    justify-content: space-between; /* Distribuye el espacio entre el label y el input */
-  }
-  .delete-button {
-    background-color: #dc3545; /* Color rojo para el botón de eliminar */
-    color: white;
-    border: none;
+    justify-content: space-between;
     padding: 10px 20px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+    background-color: #8587d6;
+    color: white;
+    position: fixed; /* Añadido */
+    top: 0; /* Posición desde arriba */
+    left: 0; /* Posición desde la izquierda */
+    width: 100%; /* Ancho del header */
+    z-index: 100; /* Asegurar que el header esté encima del contenido */
+  }
+    header nav button {
+    background-color: #cca3f3cb;
+    color: rgb(151, 120, 221);
+    border: none;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
     font-size: 16px;
-    margin: 4px 2px;
-    cursor:   
-   pointer;
-    border-radius: 4px; }
+    width: 45%;
+  }
