--- a/src/Routes/views/ModificarHabito.html
+++ b/src/Routes/views/ModificarHabito.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Modificar Hábito</title>
-  <link rel="stylesheet" href="../../../Public/ccs/Doscolumnas.css"> 
+  <link rel="stylesheet" href="../../../Public/ccs/ModUser.css"> 
 </head>
 <body>
   <h1>Modificar Hábito</h1>
