--- a/src/Routes/views/register.html
+++ b/src/Routes/views/register.html
@@ -7,52 +7,75 @@
   <link rel="stylesheet" href="../../../Public/ccs/styles.css"> 
 </head>
 <body>
-  <div class="login-container"> 
-    <form action="../index.php/register" method="POST"> 
-      <div class="input-group">
-        <label for="nombre">Nombre:</label>
-        <input type="text" id="nombre" name="nombre" required>
-        <span class="error-message" id="nombreError"></span> 
-      </div>
-      <div class="input-group">
-        <label for="apellido">Apellido:</label>
-        <input type="text" id="apellido" name="apellido" required>
-        <span class="error-message" id="apellidoError"></span> 
-      </div>
-      <div class="input-group">
-        <label for="email">Correo Electrónico:</label>
-        <input type="email" id="email" name="email" required>
-        <span class="error-message" id="emailError"></span> 
-      </div>
-      <div class="input-group">
-        <label for="password">Contraseña:</label>   
-        <input type="password" id="password" name="password" required>
-        <span class="error-message" id="passwordError"></span> 
-      </div>
-      <div class="input-group">
-        <label for="genero">Género:</label>
-        <select id="genero" name="genero">
-          <option value="">Selecciona un género</option>
-          <option value="masculino">Masculino</option>
-          <option value="femenino">Femenino</option>
-          <option value="otro">Otro</option>   
-        </select>
-        <span class="error-message" id="generoError"></span> 
-      </div>
-      <div class="input-group">
-        <label for="Pais">Pais:</label>
-        <input type="tex" id="pais" name="pais" required>
-        <span class="error-message" id="paisError"></span> 
-      </div>
-      <div class="input-group">
-        <label for="fechaNacimiento">Fecha de nacimiento:</label>
-        <input type="date" id="fechaNacimiento" name="fechaNacimiento"   
-        required>
-        <span class="error-message" id="fechaNacimientoError"></span> 
-      </div>
-      <button type="submit">Registrarse</button>
-    </form> 
-  </div>
+
+  <header>
+    </header>
+
+  <main>
+    <div class="login-container"> 
+      <form id="formulario-registro">
+        <div class="input-group">
+          <label for="nombre">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required>
+          <span class="error-message" id="nombreError"></span> 
+        </div>
+        <div class="input-group">
+          <label for="apellido">Apellido:</label>
+          <input type="text" id="apellido" name="apellido" required>
+          <span class="error-message" id="apellidoError"></span> 
+        </div>
+        <div class="input-group">
+          <label for="email">Correo Electrónico:</label>
+          <input type="email" id="email" name="email" required>
+          <span class="error-message" id="emailError"></span> 
+        </div>
+        <div class="input-group">
+          <label for="password">Contraseña:</label>   
+          <input type="password" id="password" name="password" required>
+          <span class="error-message" id="passwordError"></span> 
+        </div>
+        <div class="input-group">
+          <label for="genero">Género:</label>
+          <select id="genero" name="genero">
+            <option value="">Selecciona un género</option>
+            <option value="masculino">Masculino</option>
+            <option value="femenino">Femenino</option>
+            <option value="otro">Otro</option>   
+          </select>
+          <span class="error-message" id="generoError"></span> 
+        </div>
+        <div class="input-group">
+          <label for="pais">País:</label> 
+          <input type="text" id="pais_region" name="pais_region" required> 
+          <span class="error-message" id="paisError"></span> 
+        </div>
+        <div class="input-group">
+          <label for="fechaNacimiento">Fecha de nacimiento:</label>
+          <input type="date" id="fechaNacimiento" name="fechaNacimiento" required>
+          <span class="error-message" id="fechaNacimientoError"></span> 
+        </div>
+        <div class="input-group">
+          <label for="nivel_suscripcion">Nivel de Suscripción:</label>
+          <select id="nivel_suscripcion" name="nivel_suscripcion">
+            <option value="gratuita">Gratuita</option>
+            <option value="premium">Premium</option>
+          </select>
+          <span class="error-message" id="nivelSuscripcionError"></span> 
+        </div>
+        <div class="input-group">
+          <label for="preferencias_notificacion">Preferencias de Notificación:</label>
+          <input type="text" id="preferencias_notificacion" name="preferencias_notificacion" required>
+          <span class="error-message" id="preferenciasNotificacionError"></span> 
+        </div>
+        <button type="submit">Registrarse</button>
+      </form> 
+    </div>
+  </main>
+
+  <footer>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="../../../Public/js/ScriptRegistro.js"></script> 
 </body>
 </html>
