Login y registro unido correctamente, falta agregar y consultar habitos

--- a/Src/Routes/views/index.html
+++ b/Src/Routes/views/index.html
@@ -58,12 +58,9 @@
               </div>
               <div class="card-body">
                 <div class="appointment">
-                  <img
-                    class="image"
-                    src="https://e7.pngegg.com/pngimages/869/265/png-clipart-drawing-computer-icons-sleep-icon-angle-text.png"
-                  />
+                 
                   <span class="name">Horas de Sueño</span>
-                  <span class="title"></span>
+                  <span class="title">Sueño</span>
                   <span class="date">
                     <i class="fa fa-calendar" aria-hidden="true"></i> 22/07/2018
                   </span>
