--- a/src/Routes/views/AgregarHabito.html
+++ b/src/Routes/views/AgregarHabito.html
@@ -3,6 +3,7 @@
 <head>
   <title>Agregar Hábito</title>
   <link rel="stylesheet" href="../../../Public/ccs/ModUser.css"> 
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
   <h1>Agregar Nuevo Hábito</h1>
