--- a/src/Routes/views/register.html
+++ b/src/Routes/views/register.html
@@ -13,7 +13,7 @@
 
   <main>
     <div class="login-container"> 
-      <form id="formulario-registro">
+      <form id="formulario-registro" method="POST" action="/api-rest/api/registrar_usuario.php">
         <div class="input-group">
           <label for="nombre">Nombre:</label>
           <input type="text" id="nombre" name="nombre" required>
