--- a/src/Routes/views/login.html
+++ b/src/Routes/views/login.html
@@ -9,7 +9,7 @@
 <body>
     <div class="login-container">
         <h2>Inicio de Sesión</h2>
-        <form id="loginForm" action="../../../api-rest/api/procesar_login.php" method="POST"> 
+        <form id="loginForm">
             <div class="input-group">
                 <label for="email">Correo Electrónico</label>
                 <input type="email" id="email" name="email" required>
@@ -23,6 +23,7 @@
             <button type="submit">Iniciar Sesión</button>
         </form>
     </div>
-    <script src="../../../Public/js/scripts.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="../../../Public/js/ModUser.js"></script>
 </body>
 </html>
