--- a/src/Routes/views/AgregarHabito.html
+++ b/src/Routes/views/AgregarHabito.html
@@ -16,7 +16,7 @@
       <textarea id="descripcion_habito" name="descripcion_habito"></textarea><br><br>
 
       <label for="categoria_habito">Categoría:</label><br>
-      <select id="categoria_habito" name="categoria_habito">
+      <select id="categoria_habito" name="categoria_habito" required>
         <option value="sueño">Sueño</option>
         <option value="alimentacion">Alimentación</option>
         <option value="ejercicio">Ejercicio</option>
@@ -30,10 +30,10 @@
       </select><br><br>
 
       <label for="objetivo_habito">Objetivo:</label><br>
-      <input type="text" id="objetivo_habito" name="objetivo_habito"><br><br>
+      <input type="text" id="objetivo_habito" name="objetivo_habito" required><br><br>
 
       <label for="frecuencia">Frecuencia:</label><br>
-      <select id="frecuencia" name="frecuencia">
+      <select id="frecuencia" name="frecuencia" required>
         <option value="diaria">Diaria</option>
         <option value="semanal">Semanal</option>
         <option value="quincenal">Quincenal</option>
@@ -44,21 +44,21 @@
         <option value="otro">Otro</option>
       </select><br><br>
 
-      <label for="duracion_estimada">Duración Estimada (e.g., 30 minutos):</label><br>
-      <input type="text" id="duracion_estimada" name="duracion_estimada"><br><br>
+      <label for="duracion_estimada">Duración Estimada (minutos):</label><br>
+      <input type="number" id="duracion_estimada" name="duracion_estimada" required><br><br>
 
       <label for="estado">Estado:</label><br>
-      <select id="estado" name="estado">
-        <option value="pendiente">Pendiente</option>
-        <option value="en progreso">En Progreso</option>
+      <select id="estado" name="estado" required>
+        <option value="activo">Activo</option>
+        <option value="pausado">Pausado</option>
         <option value="completado">Completado</option>
       </select><br><br>
 
       <label for="fecha_inicio">Fecha de Inicio:</label><br>
-      <input type="date" id="fecha_inicio" name="fecha_inicio"><br><br>
+      <input type="date" id="fecha_inicio" name="fecha_inicio" required><br><br>
 
       <label for="fecha_estimacion_final">Fecha de Estimación Final:</label><br>
-      <input type="date" id="fecha_estimacion_final" name="fecha_estimacion_final"><br><br>
+      <input type="date" id="fecha_estimacion_final" name="fecha_estimacion_final" required><br><br>
 
       <button type="submit">Agregar Hábito</button>
     </form>
