--- a/Src/Routes/views/index.html
+++ b/Src/Routes/views/index.html
@@ -16,12 +16,13 @@
       <header class="header">
         <a href="#" class="btn-appointment">Nuevo Habito</a>
         <div class="profile">
-          <div class="image"></div>
-          <select>
-            <option value="Pedro Perez">Pedro Perez</option>
-          </select>
+            <div class="image"></div>
+            <select>
+                <option value="Pedro Perez">Pedro Perez</option>
+            </select>
+            <button id="logoutButton" class="btn-logout">Cerrar Sesión</button> <!-- Mover aquí -->
         </div>
-      </header>
+    </header>
       <aside class="aside">
         <ul>
           <li class="logo hide">
