--- a/Public/ccs/ModUser.css
+++ b/Public/ccs/ModUser.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Open Sans", Helvetica, sans-serif;
     background-color: #f0f0f0;
     display: flex;
     flex-direction: column; 
@@ -33,6 +33,7 @@ h1 {
 label {
     display: block;
     margin-bottom: 5px;
+    font-family: "Open Sans", Helvetica, sans-serif;
 }
 
 input, 
@@ -95,4 +96,30 @@ header {
     border-radius: 5px;
     font-size: 16px;
     width: 45%;
+  }
+.aside {
+    grid-area: aside;
+    display: grid;
+    gap: 1.5rem;
+    padding: 1rem;
+    justify-content: center;
+    font-size: 1.5rem;
+    color: #bbbbca;
+    background-color: #fcfdfd;
+    margin-top: 9rem; /* Ajusta el margen superior */
+}
+html {
+    font-size: 12px;
+  }
+  
+  body {
+    height: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    font-family: "Open Sans", Helvetica, sans-serif;
+    color: #0c0a3d;
+  }
+  
+  input {
+    font-family: "Open Sans", Helvetica, sans-serif;
   }
