--- a/Public/ccs/habitos.css
+++ b/Public/ccs/habitos.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Open Sans", Helvetica, sans-serif;
     margin: 0;
     padding: 20px;
     background-color: #f5f5f5;
@@ -68,7 +68,7 @@ h1 {
 }
 
 .btn-modificar {
-    background-color: #4CAF50;
+    background-color: rgb(151, 120, 221);
     color: white;
     padding: 10px 20px;
     border: none;
@@ -78,7 +78,7 @@ h1 {
 }
 
 .btn-modificar:hover {
-    background-color: #45a049;
+    background-color: #a04594;
 }
 
 .btn-agregar {
@@ -104,3 +104,18 @@ h1 {
     font-size: 1.1em;
     padding: 20px;
 }
+html {
+    font-size: 12px;
+  }
+  
+  body {
+    height: 100%;
+    overflow-x: hidden;
+    margin: 0;
+    font-family: "Open Sans", Helvetica, sans-serif;
+    color: #0c0a3d;
+  }
+  
+  input {
+    font-family: "Open Sans", Helvetica, sans-serif;
+  }
