--- a/src/Routes/views/login.html
+++ b/src/Routes/views/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio de Sesión</title>
-    <link rel="stylesheet" href="../../../Public/ccs/styles.css">
+    <link rel="stylesheet" href="/Habitos/Public/ccs/styles.css">
 </head>
 <body>
     <div class="login-container">
@@ -24,6 +24,6 @@
         </form>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../../../Public/js/ModUser.js"></script>
+    <script src="/Habitos/Public/js/ModUser.js"></script>
 </body>
 </html>
